qa-styles.css
/* ... */
/*------[ base css ]------*/
html {
	font-size: 16px;
	line-height: 1.5;
}

:-moz-placeholder {
	color: #bdc3c7;
	font-style: italic;
}

::-webkit-input-placeholder {
	color: #bdc3c7;
	font-style: italic;
}

/** {
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}*/

html, body {
	margin: 0;
	padding: 0;
}

body {
	background: #121212 !important;
	position: relative;
	font-family: "Ubuntu", "Helvetica", "Arial", "FreeSans", sans-serif;
	color: #fff;
}
body.body-overflow {
	overflow-y: hidden !important;
	position: fixed;
}

a {
	color: #c8c8c8;
	text-decoration: none;
}
a:active, a:focus {
	color: #c8c8c8;
	text-decoration: none;
	outline: 0;
}
a:visited {
	color: #c8c8c8;
	text-decoration: none;
}
a:hover {
	color: #c8c8c8;
	text-decoration: underline;
}

.qa-main-heading {
	display: flex;
	flex-direction: row-reverse;
	justify-content: flex-end;
	padding: 6px 0 6px 0px;
	margin-bottom: 5px;
	color: #fff;
	background: transparent;
	text-align: center;
	word-break: break-word;
}
.qa-main-heading h1 {
	width: 100%;
	align-self: center;
	text-align: left;
}

.qa-q-view-follows {
	margin-top: 3rem;
	border: 1px solid #069;
	border-left: 4px solid #069;
	border-radius: 4px;
	background-color: #282828;
	padding: 2px 5px;
	word-break: break-word;
}

h1 {
	margin: 0;
	font-size: 1.4em;
	line-height: 1.35em;
	word-wrap: break-word;
}
h1 a {
	color: #fff;
	line-height: inherit;
	border: 0;
	text-decoration: none;
	opacity: 0.85;
}
h1 a:hover {
	border-bottom: 0;
}
h1 a:hover, h1 a:focus, h1 a:visited {
	color: #fff;
	line-height: inherit !important;
	opacity: 1;
}

h2 {
	font-size: 16px;
	color: #fff;
	padding: 5px 10px !important;
	clear: both;
	background: #121212;
	font-family: Arial,Helvetica,sans-serif;
	font-weight: 700;
	border-radius: 10px;
	box-shadow: 0 -25px 10px -25px #069 inset;
}

h3 {
	font-size: 1em;
}
h4 {
	font-size: 0.875em;
}
h5 {
	font-size: 0.75em;
}
h6 {
	font-size: 0.625em;
}

p {
	margin: 0 0 1em 0;
}

hr {
	background-color: #bdc3c7;
	display: block;
	margin: 20px 0;
	border: none;
	height: 1px;
}

img {
	vertical-align: bottom;
	max-width: 100%;
	height: auto !important;
}

input, textarea, select {
	font-size: 0.875em;
}

b, strong {
	font-weight: bold;
}

small {
	font-size: 0.75em;
}

table {
	border-collapse: collapse;
	max-width: 100%;
	width: 100%;
}

th, td {
	padding: 10px 0;
}

pre {
	background-color: #e0e4e5;
	border-left: 8px solid #3498db;
	margin: 1em 0;
	overflow: auto;
	padding: 0.4em 0.8em;
	width: 98%;
	font-size: 0.82em;
}
pre code {
	background-color: #d6dadb;
}

code, samp, kbd {
	color: #34495e;
	font-family: "Courier New",Courier,monospace,sans-serif;
	text-align: left;
}

blockquote {
	background-color: #282828;
	border: 1px solid #181818;
	border-left: .3rem solid #069;
	border-radius: 4px;
	padding: 15px;
	margin: 30px auto;
	overflow-x: auto;
}
blockquote p {
	margin: 0;
	font-size: 1em;
	font-style: italic;
	color: #fff;
}

.qa-search {
	padding: 8px;
	margin-bottom: 5px;
	background: #bdc3c7;
}

.qa-search-field {
	margin: 0 -40px 0 0;
	padding: 0 40px 0 5px;
	vertical-align: bottom;
	width: 100%;
	height: 36px;
	border: 1px solid #069;
	border-radius: 8px;
}
.qa-search-field:focus {
	border-color: #e6e6e6;
}

.qa-search-button {
	width: 36px;
	height: 36px;
	margin: 0 !important;
	text-indent: -9999px;
	background: #bdc3c7 url('images/search-icon-white.png') center no-repeat;
	border: none;
	outline: none;
}

@media (max-width: 979px) {
	.qam-search {
		display: none;
	}
}


.qam-search.turquoise .qa-search {
	background: transparent;
	margin-top: 1rem;
}
.qam-search.turquoise .qa-search-field:focus {
	border-color: #0af;
}
.qam-search.turquoise .qa-search-button {
	background-color: transparent;
}

.qam-search.the-top {
	display: none;
	margin: 0 10px 10px;
}

.qa-error, .qa-warning, .qa-success, .qa-notice {
	margin-bottom: 5px;
	padding: 10px;
	color: #fff;
}
.qa-error a, .qa-warning a, .qa-notice a {
	color: #fff;
	border-bottom: 1px dotted #fff;
}
.qa-error a:hover, .qa-warning a:hover, .qa-notice a:hover {
	color: #fff;
	border-bottom: 0;
}

.qa-error {
	background: transparent;
	color: red;
	position: relative;
	z-index: 999;
}
.qa-warning {
	background: #f1c40f;
	position: relative;
	z-index: 999;
}
.qa-success {
	background: #27ae60;
	position: relative;
	z-index: 999;
}

.qa-notice {
	margin-bottom: 0;
	background: #d35400;
	text-align: center;
	font-size: 1em;
	line-height: 1.5em;
}


.qa-notice-close-button {
	margin: 0;
	float: right;
	width: 24px;
	height: 24px;
	display: block;
	background: transparent url('images/icons/close-black.png') no-repeat center;
	text-indent: -9999px;
	border: none;
	outline: none;
	transition: background-image 0.5s;
}
.qa-notice-close-button:hover, .qa-notice-close-button:focus {
	background: transparent url('images/icons/close-red.png'); /* override generic input styles */
	outline: none;
	border: none;
}

/*------[ main nav css ]------*/
@media (max-width: 767px) {
	.qa-template-questions.qam-body-fixed, .qa-template-unanswered.qam-body-fixed, .qa-template-user.qam-body-fixed,
	.qa-template-account.qam-body-fixed, .qa-template-messages.qam-body-fixed, .qa-template-favorites.qam-body-fixed,
	[class^="qa-template-user-"].qam-body-fixed, [class*="qa-template-user-"].qam-body-fixed {
		padding-top: 118px;
	}
}
@media (min-width: 768px) {
	.qa-template-questions.qam-body-fixed, .qa-template-unanswered.qam-body-fixed, .qa-template-user.qam-body-fixed,
	.qa-template-account.qam-body-fixed, .qa-template-messages.qam-body-fixed, .qa-template-favorites.qam-body-fixed,
	[class^="qa-template-user-"].qam-body-fixed, [class*="qa-template-user-"].qam-body-fixed {
		padding-top: 105px;
	}
}
/* ... */

